ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-apollo
  namespace: sre
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: apollo.config.dev.zking.com
    http:
      paths:
      - path:
        backend:
          serviceName: service-apollo-config-server-dev
          servicePort: 8080
  - host: apollo.portal.zking.com
    http:
      paths:
      - path:
        backend:
          serviceName: service-apollo-portal-server
          servicePort: 8070
